kubernetes/apps/network/gateway/cilium/gateway-infrastructure.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-external
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: gateway.${SECRET_DOMAIN}
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.2.20
  listeners:
 #   - name: http
#      protocol: HTTP
 #     port: 80
 #     hostname: "*."
 #     allowedRoutes:
  #      namespaces:
  #        from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert-tls
  # TODO: Not yet supported - https://github.com/cilium/cilium/issues/21926
  # addresses:
  #   - type: IPAddress
  #     value: "192.168.2.20"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-internal
  namespace: networking
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.2.21
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert-tls
  # Not yet supported - https://github.com/cilium/cilium/issues/21926
  # addresses:
  #   - type: IPAddress
  #     value: "192.168.2.21"
